[gd_scene load_steps=3 format=3 uid="uid://dhdggq3xwt4sp"]

[ext_resource type="Script" uid="uid://dekyvj4ult7vp" path="res://radar.gd" id="1_7gci2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7gci2"]
radius = 267.092

[node name="radar" type="Area2D"]
collision_layer = 0
collision_mask = 15
script = ExtResource("1_7gci2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7gci2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
